--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certificate Generator using javascript</title>
+    <title>Certificate Generator</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png"/>
@@ -11,10 +11,7 @@
 <body>
 
     <header>
-        <div class="heading_text">
-            <h1>Create Certificates for Free in Minutes</h1>
-            <h2>Make unique certificates in minutes. No design skills needed.</h2>
-        </div>
+     
       
     </header>
     <main>
